projekt.css: Modified minimum width on small devices due to avoid issues with smaller screens.

--- a/Development/projekt.css
+++ b/Development/projekt.css
@@ -73,7 +73,7 @@ h1, select{
 	grid-auto-flow: column;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 400px) {
     #feladatok_grid {
         grid-template-rows: repeat(8, 1fr);
         grid-template-columns: repeat(1, 1fr);
